--- a/PhoenixVPN/Info.plist
+++ b/PhoenixVPN/Info.plist
@@ -24,22 +24,19 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-  <key>NSExceptionDomains</key>
-  <dict>
-    <key>bdcorpus.com</key>
-    <dict>
-      <!--Include to allow subdomains-->
-      <key>NSIncludesSubdomains</key>
-      <true/>
-      <!--Include to allow HTTP requests-->
-      <key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
-      <true/>
-      <!--Include to specify minimum TLS version-->
-      <key>NSTemporaryExceptionMinimumTLSVersion</key>
-      <string>TLSv1.1</string>
-    </dict>
-  </dict>
-</dict>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>bdcorpus.com</key>
+			<dict>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSTemporaryExceptionMinimumTLSVersion</key>
+				<string>TLSv1.1</string>
+			</dict>
+		</dict>
+	</dict>
 	<key>NSDesktopFolderUsageDescription</key>
 	<string></string>
 	<key>UIApplicationSceneManifest</key>
@@ -61,6 +58,12 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>external-accessory</string>
+		<string>fetch</string>
+		<string>processing</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
