changes after changes

--- a/PhoenixVPN/Info.plist
+++ b/PhoenixVPN/Info.plist
@@ -62,6 +62,7 @@
 	<array>
 		<string>external-accessory</string>
 		<string>fetch</string>
+		<string>location</string>
 		<string>processing</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
